name:           hyper-cms
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jason

executable hyper-cms
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   warp,
                   http-types,
                   wai
  ghc-options:     -Wall
  extensions:      OverloadedStrings

