name:           hyper-cms
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         jason

executable hyper-cms
  hs-source-dirs:  src
  main-is:         Hyper/Hyper.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   warp,
                   http-types,
                   wai,
                   parsec
  ghc-options:     -Wall
  extensions:      OverloadedStrings
  other-modules:   
                   Hyper.Config,
                   Hyper.Config.Database,
                   Hyper.Config.File,
                   Hyper.Config.File.Parser,
                   Hyper.Config.Types,
                   Hyper.Constants,
                   Hyper.Options

