name:           hyper-cms
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         jason

executable hyper-cms
  hs-source-dirs:  src
  main-is:         Hyper/Hyper.hs
  build-depends:   
                   base >= 4,
                   bytestring,
                   warp,
                   http-types,
                   wai,
                   parsec,
                   containers,
                   filepath,
                   directory,
                   xml-conduit,
                   text
  ghc-options:     -Wall
  extensions:      OverloadedStrings
  other-modules:   
                   Hyper.Config,
                   Hyper.Config.Database,
                   Hyper.Config.File,
                   Hyper.Config.File.Parser,
                   Hyper.Config.Types,
                   Hyper.Constants,
                   Hyper.Network.Wai.Auth.Digest,
                   Hyper.Network.Wai.Handler,
                   Hyper.Network.Wai.Handler.Multi,
                   Hyper.Network.Wai.Handler.Single,
                   Hyper.Options,
                   Hyper.Text.TemplateEngine

test-suite Hyper-test
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4,
                   QuickCheck
  hs-source-dirs:  src/Hyper-test
  main-is:         Hyper-test.hs

